# sentio

./: .env.example  netlify.toml  package-lock.json  package.json
client/: .env.production  chat.html  index.html  package-lock.json  package.json  vite.config.js
client/css/: style.css
client/js/: chat.js  main.js  socket.js  stellar.js  ui.js  webrtc.js
contracts/reputation/: Cargo.toml  README.md  deploy.sh
contracts/reputation/src/: lib.rs
server/: auth.js  index.js  matchmaking.js  reputation.js  stellar.js
